# QFakturyDB

./: CMakeLists.txt  README.md
qfakturydb/: CMakeLists.txt  MainWindow.cpp
qfakturydb-core/: CMakeLists.txt  User.h  qfakturydb-core_global.h
